Created the About Page and Made Changes

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <section class="change-width" style="padding:0px; border-bottom:solid .1rem #262626;">
       <div style="background-color: inherit; padding-top:5px; padding-bottom:5px; justify-content:left; display:block; font-family:'Open Sans', sans-serif; font-size: 14px;">
         <ul style="display:flex;padding:0px; font-size:14px;margin:0px;">
-          <li style="display:block; margin-top: 0px; flex:1;"><a href="./index.html" style="background-repeat:no-repeat; font-weight:500; text-shadow:none;">mattcoleman.net</a></li>
+          <li style="display:block; margin-top: 0px; flex:1;"><a href="./index" id="nav-item">mattcoleman.net</a></li>
           <li style="display:block; margin-top: 0px; padding-right:6px;border-right:solid .5px #414141"><a id="nav-item" href="./index">Home</a></li>
           <li style="display:block; margin-top: 0px; padding-left:6px; padding-right:6px; border-right:solid .5px #414141"><a id="nav-item" href="./follow">Follow</a></li>
           <li style="display:block; margin-top: 0px; padding-left:6px;"><a id="nav-item" href="./about">About</a></li>
@@ -40,43 +40,48 @@
 <!-- BEGIN: Post Body -->
       <section>
         <div class="rightborder">
-        		<p>My name is a Matt Coleman. I'm originally from southern California and currently reside in San Francisco. This is my personal website, which I plan on using to write about and track my ideas and opinions pertaining to sports and business, especially when these two topics intersect. I started this to create something that is my own but, more importantly, to document these ideas so others&#8212;primarily my friends and family&#8212;can interact and respond. <span id="highlight">Personally, I believe the best way to build credibility in any field, whether in poltics, business, or entertainment, is by writing and sharing your ideas with other&#8212;so here is my attempt.</span> For those who visit <a href="http://www.theringer.com" title="The Ringer"> The Ringer</a>, <a href="http://www.theathletic.com" title="The Athletic">The Athletic</a>, and <a href="http://www.barstoolsports.com" title="Barstool Sports">Barstool Sports</a>, you'll notice their influences throughout the site because these are the writers and personalities that I personally follow.<label for="sn-extensive-use-of-sidenotes" class="margin-toggle sidenote-number"></label><input type="checkbox" id="sn-extensive-use-of-sidenotes" class="margin-toggle"/><span class="sidenote">Also, the inspiration for the sidenotes stems from my fascination of <a href="https://www.grantland.com" title="Grantland">Grantland</a>&#8212;which regularly used sidenotes throughout all of its posts. (RIP, Grantland)</span></p>
+        		<p>My name is a Matt Coleman. I am originally from southern California, for the time being, currently live in San Francisco. In August, I will be starting my MBA at <a href="http://www.anderson.ucla.edu/" title="UCLA Anderson">UCLA Anderson</a>. After graduation, my goal is to work in investment banking, specifically in technology, media, and entertainment. I started this personal blog to write and track my ideas and opinions about sports, business, and the intersection of the two. Throughout my business school journey I plan on documenting my progress and experiences, as well, <span id="highlight">because I am a believer that to attain your personal goals you need to document, share, and explain in detail your aspirations and ideas to others</span>.</p>
 
-				<p>Currently, I'm a management consultant at Accenture and will be starting at UCLA Anderson this August, pursuing my MBA. This is the second paragrpah<label for="sn-social-reading" class="margin-toggle sidenote-number"></label><input type="checkbox" id="sn-social-reading" class="margin-toggle"/><span class="sidenote" style="font-family: 'Open Sans',sans-serif; font-weight:300;">Yes, Kindle changed the way we read books and then… stopped there. I want social highlights, notes, flash cards, and fractal reading (each chapter summarized in 1 paragraph, expandable on several levels if you want to dig deeper)<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#8212;&nbsp;Florent Crivello <a href="https://twitter.com/Altimor/status/1003408586553294856">@Altimor</a></span> alongside people we respect.</p>
-
-        		<h1 class="about">About</h1>
-        		<div class="bottomborder-internal"></div>
-
-        		<p><span class="newthought">Instant editors.</span> Think Google Maps, but for basketball video.<label for="sn-google-maps" class="margin-toggle sidenote-number"></label><input type="checkbox" id="sn-google-maps" class="margin-toggle"/><span class="sidenote" style="font-family: 'Open Sans',sans-serif; font-weight:300;">“Read <a href="https://www.justinobeirne.com/google-maps-moat"> Google Maps's Moat</a> for a directional idea of what's possible.</span> Searchable at any scale. Tags from various data sources as APIs in, all mapping to specific frames in the video. Example: auto-query every dunk from every game on YouTube played yesterday in 2.5-second clips ordered by loudest ovation to quietest. That's a start.</p>
-        		<p><span class="newthought">Slider bars for auto compression.</span> Drag&nbsp; <font color="7BAFD4"><span class="fas fa-sliders-h"></span></font>&nbsp; to choose your time allocation, then fill in the most important content within that constraint. It would be choppy and imperfect. And full of signal.
-          			<br>&nbsp;&nbsp;&#8212; <em>NBA game</em> | 1 minute to 150 minutes
-         			<br>&nbsp;&nbsp;&#8212; <em>book</em> | 1 page to 1,000 pages
-          			<br>&nbsp;&nbsp;&#8212; <em>article</em> | 1 paragraph to 100 paragraphs
-        		</p>
-
-        		<h1 class="about">My Timeline</h1>
-        		<div class="bottomborder-internal"></div>
-
+        		<p>Some quick personal highlights:</p>
         		<p>
         			<ul>
-        				<li>Line Item 1</li>
-        				<li>Line Item 2</li>
-        				<li>Line Item 3</li>
-        				<li>Line Item 4</li>
-        				<li>Line Item 5</li>
-        				<li>Line Item 6</li>
-        				<li>Line Item 7</li>
-        				<li>Line Item 8</li>
-        				<li>Line Item 9</li>
-        				<li>Line Item 10</li>
+        				<li class="color-dot"><b>2010 &#8212; </b>Graduated from Dana Hills High School<label for="sn-extensive-use-of-sidenotes" class="margin-toggle sidenote-number"></label><input type="checkbox" id="sn-extensive-use-of-sidenotes" class="margin-toggle"/><span class="sidenote">While writing this, I realized that my 10-year high school reunion is in the next year, and I'll be unemployed, broke student when it takes place. F#@k.</span></li>
+        				<li class="color-dot"><b>2014 &#8212; </b>Graduated from UCLA with a BS in Mechanical Engineering</li>
+        				<li class="color-dot"><b>2018 &#8212; </b>Enjoyed the <a href="https://en.wikipedia.org/wiki/Philly_Special" title="Philly Special">greatest sports moment</a> of my life and achieved sports-fan nirvana</li>
         			</ul>
         		</p>
 
+        		<p>Knowing that there is an over-saturation of content out there, the intended audience for this site is my future self, my family members (primarily my mom and dad), and my friends. I hope to use this to practice my writing&#8212;something everyone should do&#8212;and learn about new subjects, such as building a custom website. Additionally, I plan on writing about content that I come across and want to expand upon. Whether the article or podcast lives on <a href="http://www.theringer.com" title="The Ringer"> The Ringer</a>, <a href="http://www.theathletic.com" title="The Athletic">The Athletic</a>, <a href="http://www.barstoolsports.com" title="Barstool Sports">Barstool Sports</a>, <a href="https://www.wsj.com" title="The Wall Street Journal"><i>The Wall Street Journal</i></a>, <a href="http://www.forbes.com" href="Forbes">Forbes</a>, or <a href="https://audioboom.com/channel/sbr" title="Sports Business Radio">Sports Business Radio</a>, I hope to provide worthwhile analysis that is influenced by my experiences as a fan, athlete, and business consultant.<label for="sn-extensive-use-of-sidenotes" class="margin-toggle sidenote-number"></label><input type="checkbox" id="sn-extensive-use-of-sidenotes" class="margin-toggle"/><span class="sidenote">Througout the sie, you'll see sidenotes, which were inspired by my fascination of <a href="https://www.grantland.com" title="Grantland">Grantland</a>&#8212; and its web layout, which regularly featured sidenotes throughout all posts. So this, in my mind, pays homage to the site that introduced me to some of my favorite writers.</span></p>
+
+				<h1 class="about">My Teams</h1>
+        		<div class="bottomborder-internal"></div>
+
+        		<h2 style="margin-top:1.25rem; font-weight:600;color:#1779ba;">Philadelphia?</h2>
+        		<p>Throughout my life, people always found it peculiar that I rooted for professional teams based in Philadelphia, especially given the fact that I have spent my entire life residing in the Pacific time zone. Remember, I grew up in southern California in the late-90s and early-2000s, an era when the NFL didn't have a presence in Los Angeles and only those who resdided in San Diego County truly followed the Chargers. In my mind, I was a free agent fan, with the opportunity to follow any team as long as I was one or two degrees removed from that city or team.<label for="sn-extensive-use-of-sidenotes" class="margin-toggle sidenote-number"></label><input type="checkbox" id="sn-extensive-use-of-sidenotes" class="margin-toggle"/><span class="sidenote">There are thousands, if not hundreds of thousands, of fans in their early-30s throughout the Los Angeles basin who still have allegience to the Broncos, Packers, Cowboys, Steelers, and Patriots, among others.</span></p>
+
+        		<p>My one degree of separation stems from father, a proud son of the Delaware Valley and still a digital subsriber to <a href="https://www.philly.com"><i>The Phialdelphia Inquirer</i></a>. With this, I have been both blessed and cursed&#8212;a part of me I would never change. <b>Fly Eagles Fly. Here They Come. Ring The Bell.</b><label for="sn-extensive-use-of-sidenotes" class="margin-toggle sidenote-number"></label><input type="checkbox" id="sn-extensive-use-of-sidenotes" class="margin-toggle"/><span class="sidenote">One of my father and mine favorite days in sports is when the NFL schedule is released, which generally takes place in April. This is the day we can plan our travels to see our Birds play in September or October.</span></p>
+        		
+        		<h2 style="font-weight:600;color:#1779ba;">Westwood</h2>
+        		<p>I am a proud alumnus, and eventual double-alumnus, of UCLA. And while I was not able to enjoy the same moments as those who attended the school during the John Wooden-era, I am optimistic that the school will get both programs on track. It starts by, first, hiring coaches that focus on "coaching up" the young men they recruit, and, second, developing competitive atmospheres which, in my personal opinion, breeds continual success.</p>
+
+        		<p><span class="newthought">However, beofre I am six feet under, I <b><u>desparately</u></b> hope to see these two events	:
+          			<br>&nbsp;&nbsp;&#8212; Rose Bowl<label for="sn-extensive-use-of-sidenotes" class="margin-toggle sidenote-number"></label><input type="checkbox" id="sn-extensive-use-of-sidenotes" class="margin-toggle"/><span class="sidenote">It doesn't even need to be for a national title. I'm just hoping for one New Year's Day in Pasadena.</span>
+         			<br>&nbsp;&nbsp;&#8212; Basketball National Title<label for="sn-extensive-use-of-sidenotes" class="margin-toggle sidenote-number"></label><input type="checkbox" id="sn-extensive-use-of-sidenotes" class="margin-toggle"/><span class="sidenote">We have eleven of them (the most of any program). We need to regain some form of dominance.</span>
+        		</p>
+
+        		<h1 class="about">My Resume</h1>
+        		<div class="bottomborder-internal"></div>
+        		<h2 style="margin-top:1.25rem; font-weight:600;color:#1779ba;">Education</h2>
+        		<p><b>UCLA Anderson School of Management</b> | MBA<br><i>Starting August 2019</i></p>
+        		<p><b>UCLA Samueli School of Engineering and Applied Sciences</b> | BS Mechanical Engineering<br><i>September 2010 - June 2014</i></p><br>
+        		<h2 style="margin-top:1.25rem; font-weight:600;color:#1779ba;">Professional Experience</h2>
+        		<p><b>Accenture</b> | Technology Consultant<br><i>August 2014 - Current</i></p>
+        		
         		<h1 class="about">Contact</h1>
         		<div class="bottomborder-internal"></div>
 
         		<p>
-        		Text Text Text Text
+        		If you enjoy reading the posts and want to get in touch, please feel free to email me at <a href="mailto:mjcoleman32@gmail.com?Subject=Reaching%20Out" target="_top">mjcoleman32@gmailcom</a>. Also, if you want you to be a part of the newsletter, please sign up by providing your email below. You can always follow me on <a href="https://twitter.com/mattkingcole32" title="Twitter">Twitter</a> or <a href="https://www.linkedin.com/in/matt-coleman/" title="LinkedIn">LinkedIn</a>.
         		</p>
 
       		</section>
@@ -90,7 +95,7 @@
                <label for="mce-EMAIL" style="justify-content: center; display:flex; margin:0px; font-size: 14px; font-weight: 600;">Want to receive Matt's newsletter?</label>
               </span>
               <span style="justify-content: center; display:flex; padding-top:.5rem; padding-bottom:.75rem;">
-               <input type="email" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email address" required style="width:250px; text-align:center; background-color:#F5F5F5; padding-bottom: 5px; border: none; border-bottom: solid 1px #262626">
+               <input type="email" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email address" required style="width:250px; text-align:center; background-color:#F5F5F5; padding-bottom: 5px; border-top: none; border-left: none; border-right: none; border-bottom: solid 1px #262626; border-radius: 0px; box-shadow:none;">
               </span>
               <span style="justify-content: center; display:flex;">
                 <button id="submit-button" value="Subscribe" id="mc-embedded-subscribe" type="submit">Subscribe</button>
