--- a/follow.html
+++ b/follow.html
@@ -17,7 +17,7 @@
     <section class="change-width" style="padding:0px; border-bottom:solid .1rem #262626;">
       <div style="background-color: inherit; padding-top:5px; padding-bottom:5px; justify-content:left; display:block; font-family:'Open Sans', sans-serif; font-size: 14px;">
         <ul style="display:flex;padding:0px; font-size:14px;margin:0px;">
-          <li style="display:block; margin-top: 0px; flex:1;"><a href="./index.html" style="background-repeat:no-repeat; font-weight:500; text-shadow:none;">mattcoleman.net</a></li>
+          <li style="display:block; margin-top: 0px; flex:1;"><a href="./index" id="nav-item">mattcoleman.net</a></li>
           <li style="display:block; margin-top: 0px; padding-right:6px;border-right:solid .5px #414141"><a id="nav-item" href="./index">Home</a></li>
           <li style="display:block; margin-top: 0px; padding-left:6px; padding-right:6px; border-right:solid .5px #414141"><a id="nav-item" href="./follow">Follow</a></li>
           <li style="display:block; margin-top: 0px; padding-left:6px;"><a id="nav-item" href="./about">About</a></li>
@@ -40,7 +40,7 @@
               <label for="mce-EMAIL" style="justify-content: center; display:flex; margin:0px; font-size: 14px; font-weight: 600; padding-top:25px">Want to receive Matt's newsletter?</label>
             </span>
             <span style="justify-content: center; display:flex; padding-top:.5rem; padding-bottom:.75rem;">
-              <input type="email" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email address" required style="width:250px; text-align:center; background-color:#F5F5F5; padding-bottom: 5px; border: none; border-bottom: solid 1px #262626">
+              <input type="email" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email address" required style="width:250px; text-align:center; background-color:#F5F5F5; padding-bottom: 5px; border-top: none; border-left: none; border-right: none; border-bottom: solid 1px #262626; border-radius: 0px; box-shadow:none;">
             </span>
             <span style="justify-content: center; display:flex; padding-bottom:25px">
               <button id="submit-button" value="Subscribe" id="mc-embedded-subscribe" type="submit">Subscribe</button>
