--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="change-width" style="padding:0px; border-bottom:solid .1rem #262626;">
       <div style="background-color: inherit; padding-top:5px; padding-bottom:5px; justify-content:left; display:block; font-family:'Open Sans', sans-serif; font-size: 14px;">
         <ul style="display:flex;padding:0px; font-size:14px;margin:0px;">
-          <li style="display:block; margin-top: 0px; flex:1;"><a href="./index.html" style="background-repeat:no-repeat; font-weight:500; text-shadow:none;">mattcoleman.net</a></li>
+          <li style="display:block; margin-top: 0px; flex:1;"><a href="./index" id="nav-item">mattcoleman.net</a></li>
           <li style="display:block; margin-top: 0px; padding-right:6px;border-right:solid .5px #414141"><a id="nav-item" href="./index">Home</a></li>
           <li style="display:block; margin-top: 0px; padding-left:6px; padding-right:6px; border-right:solid .5px #414141"><a id="nav-item" href="./follow">Follow</a></li>
           <li style="display:block; margin-top: 0px; padding-left:6px;"><a id="nav-item" href="./about">About</a></li>
