Fixed the "a Matt Coleman"

--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 <!-- BEGIN: Post Body -->
       <section>
         <div class="rightborder">
-        		<p>My name is a Matt Coleman. I am originally from southern California, for the time being, currently live in San Francisco. In August, I will be starting my MBA at <a href="http://www.anderson.ucla.edu/" title="UCLA Anderson">UCLA Anderson</a>. After graduation, my goal is to work in investment banking, specifically in technology, media, and entertainment. I started this personal blog to write and track my ideas and opinions about sports, business, and the intersection of the two. Throughout my business school journey I plan on documenting my progress and experiences, as well, <span id="highlight">because I am a believer that to attain your personal goals you need to document, share, and explain in detail your aspirations and ideas to others</span>.</p>
+        		<p>My name is Matt Coleman. I am originally from southern California, for the time being, currently live in San Francisco. In August, I will be starting my MBA at <a href="http://www.anderson.ucla.edu/" title="UCLA Anderson">UCLA Anderson</a>. After graduation, my goal is to work in investment banking, specifically in technology, media, and entertainment. I started this personal blog to write and track my ideas and opinions about sports, business, and the intersection of the two. Throughout my business school journey I plan on documenting my progress and experiences, as well, <span id="highlight">because I am a believer that to attain your personal goals you need to document, share, and explain in detail your aspirations and ideas to others</span>.</p>
 
         		<p>Some quick personal highlights:</p>
         		<p>
