Added Kawhi post
Added Kawhi post, changed the index page, and about page

--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
         		<div class="bottomborder-internal"></div>
 
         		<p>
-        		If you enjoy reading the posts and want to get in touch, please feel free to email me at <a href="mailto:mjcoleman32@gmail.com?Subject=Reaching%20Out" target="_top">mjcoleman32@gmailcom</a>. Also, if you want you to be a part of the newsletter, please sign up by providing your email below. You can always follow me on <a href="https://twitter.com/mattkingcole32" title="Twitter">Twitter</a> or <a href="https://www.linkedin.com/in/matt-coleman/" title="LinkedIn">LinkedIn</a>.
+        		If you enjoy reading the posts and want to get in touch, please feel free to email me at <a href="mailto:mjcoleman32@gmail.com?Subject=Reaching%20Out" target="_top">mjcoleman32@gmail.com</a>. Also, if you want you to be a part of the newsletter, please sign up by providing your email below. You can always follow me on <a href="https://twitter.com/mattkingcole32" title="Twitter">Twitter</a> or <a href="https://www.linkedin.com/in/matt-coleman/" title="LinkedIn">LinkedIn</a>.
         		</p>
 
       		</section>
