--- a/index.html
+++ b/index.html
@@ -39,29 +39,20 @@
       			<span id="highlight"><h2 id="highlight" style="font-weight:700; color:#262626; font-size:1em; margin-bottom:.25em; width:fit-content">MOST RECENT POSTS</h2></span>
       		</div>
       		<div style="border-bottom: solid .05rem #262626;">
-      			<a href="./index.html">
-	      			<div class="homehover"style="margin-top:.75em; margin-bottom:.75em; display:block;padding:2.5px;">
-		    			<h1 class="home" style="text-decoration:underline;">Working Working Working Working Title</h1>
-		    			<h2 class="home">July 24, 2019</h2>
-		    			<p class="home">Subdescription of the article in this one...</p>
-	        		</div>
-	        	</a>
-	    	</div>
-	        <div style="border-bottom: solid .05rem #262626;">
-      			<a href="./index.html">
+      			<a href="./what_should_kawhi_sign_for.html">
 	      			<div class="homehover" style="margin-top:.75em; margin-bottom:.75em; display:block;padding:2.5px;">
-		    			<h1 class="home" style="text-decoration:underline;">Working Working Working Working Title</h1>
-		    			<h2 class="home">July 24, 2019</h2>
-		    			<p class="home">Subdescription of the article in this one...</p>
+		    			<h1 class="home" style="text-decoration:underline;">What Should Kawhi Sign For?</h1>
+		    			<h2 class="home">June 20, 2019</h2>
+		    			<p class="home">Kawhi's options for this offseason, aside from where he will be playing...</p>
 	        		</div>
 	        	</a>
 	    	</div>
 	    	<div style="">
-      			<a href="./index.html">
+      			<a href="./about.html">
 	      			<div class="homehover" style="margin-top:.75em; margin-bottom:.75em; display:block;padding:2.5px;">
-		    			<h1 class="home" style="text-decoration:underline;">Working Working Working Working Title</h1>
-		    			<h2 class="home">July 24, 2019</h2>
-		    			<p class="home">Subdescription of the article in this one...</p>
+		    			<h1 class="home" style="text-decoration:underline;">About</h1>
+		    			<h2 class="home">June 1, 2019</h2>
+		    			<p class="home">About this blog...</p>
 	        		</div>
 	        	</a>
 	    	</div>
