Added Lakers, changed index, and edited Kawhi

--- a/index.html
+++ b/index.html
@@ -38,17 +38,26 @@
       		<div style="border-bottom-style: solid; border-bottom-width:.15rem; border-bottom-color: #262626;margin-top:1em;">
       			<span id="highlight"><h2 id="highlight" style="font-weight:700; color:#262626; font-size:1em; margin-bottom:.25em; width:fit-content">MOST RECENT POSTS</h2></span>
       		</div>
+          <div style="border-bottom: solid .05rem #262626;">
+            <a href="./lakers_mishap_and_fix">
+              <div class="homehover" style="margin-top:.75em; margin-bottom:.75em; display:block;padding:2.5px;">
+              <h1 class="home" style="text-decoration:underline;">The Lakers Mishap and Fix</h1>
+              <h2 class="home">June 28, 2019</h2>
+              <p class="home">How the Lakers' blunder was bailed out by the Wizards...</p>
+              </div>
+            </a>
+        </div>
       		<div style="border-bottom: solid .05rem #262626;">
-      			<a href="./what_should_kawhi_sign_for.html">
-	      			<div class="homehover" style="margin-top:.75em; margin-bottom:.75em; display:block;padding:2.5px;">
-		    			<h1 class="home" style="text-decoration:underline;">What Should Kawhi Sign For?</h1>
-		    			<h2 class="home">June 20, 2019</h2>
-		    			<p class="home">Kawhi's options for this offseason, aside from where he will be playing...</p>
-	        		</div>
-	        	</a>
-	    	</div>
+            <a href="./what_should_kawhi_sign_for">
+              <div class="homehover" style="margin-top:.75em; margin-bottom:.75em; display:block;padding:2.5px;">
+              <h1 class="home" style="text-decoration:underline;">What Should Kawhi Sign For?</h1>
+              <h2 class="home">June 20, 2019</h2>
+              <p class="home">Kawhi's options for this offseason, aside from where he will be playing...</p>
+              </div>
+            </a>
+        </div>
 	    	<div style="">
-      			<a href="./about.html">
+      			<a href="./about">
 	      			<div class="homehover" style="margin-top:.75em; margin-bottom:.75em; display:block;padding:2.5px;">
 		    			<h1 class="home" style="text-decoration:underline;">About</h1>
 		    			<h2 class="home">June 1, 2019</h2>
