--- a/what_should_kawhi_sign_for.html
+++ b/what_should_kawhi_sign_for.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>Matt Coleman: Home</title>
+    <title>Matt Coleman: What Should Kawhi Sign For?</title>
     <link rel="icon" href="./images/matt-coleman-icon.png" type="image/x-icon"/>
     <link rel="stylesheet" href="./css/tufte.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
