--- a/what_should_kawhi_sign_for.html
+++ b/what_should_kawhi_sign_for.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111200803-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-111200803-2');
+    </script>
     <meta charset="utf-8"/>
     <title>Matt Coleman: What Should Kawhi Sign For?</title>
     <link rel="icon" href="./images/matt-coleman-icon.png" type="image/x-icon"/>
